wp-content/themes/immo-waldhof/src/styles/_base.scss
html {
  overflow-x: hidden;
}

body {
  font-family: var(--font-tertiary), sans-serif;
  font-size: var(--p-size);
  line-height: var(--p-line-height);
  background-color: var(--color-beige-light);
  color: var(--color-grey);
  overflow-x: hidden;

  &.openMenu {
    overflow-y: hidden;
    height: 100vh;
  }
}

.container {
  padding: 0 20px;
  width: auto;

  @media (min-width: $minLg) {
    max-width: 1400px;
    margin: auto;
  }
}

.isComponent {
  &.isLight {
    background-color: var(--color-tertiary);
  }

  &.isHigher {
    height: 0;

    .container > *:first-child {
      transform: translateY(-50%);
    }
  }
}

a {
  text-decoration: none;
}

.h1 {
  font-size: var(--h1-size);
  font-family: var(--font-primary), serif;
  line-height: var(--h1-line-height);
}

.h2 {
  font-size: var(--h2-size);
  font-family: var(--font-secondary), sans-serif;
  line-height: var(--h2-line-height);
}

.h3 {
  font-size: var(--h3-size);
  font-family: var(--font-secondary), sans-serif;
  line-height: var(--h3-line-height);
  letter-spacing: var(--h3-letter-spacing);
}

.h4 {
  font-size: var(--h4-size);
  font-family: var(--font-secondary), sans-serif;
  line-height: var(--h4-line-height);
  letter-spacing: var(--h4-letter-spacing);
}

.h5 {
  font-size: var(--h5-size);
  font-family: var(--font-secondary), sans-serif;
  line-height: var(--h5-line-height);
  letter-spacing: var(--h5-letter-spacing);
}

.h6 {
  font-size: var(--h6-size);
  font-family: var(--font-secondary), sans-serif;
  line-height: var(--h6-line-height);
  letter-spacing: var(--h6-letter-spacing);
}

